# steam-atlas

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: index.html
experiments/: ablate_detailed_vs_summary.py  ablate_tags_in_prompt.py  analyze_facet_overlap.py  analyze_review_signals.py  analyze_top_tags.py  fetch_appdetails.py
pipeline/: 00_enumerate_games.py  01_fetch_tags.py  02_select_top_games.py  03_compute_sentiment.py  04_summarize_descriptions.py  05_embed_descriptions.py  06_reduce_umap.py  07_induce_facets.py  07_label_facets.py  08_label_topics.py  09_visualize.py  config.py  design_facets.py  facets_schema.json  filter_panel.html
