[project]
name = "steam-atlas"
version = "0.1.0"
description = "Top games on Steam, embedded and laid out as an interactive 2D semantic atlas"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "huggingface-hub>=0.20",
    "cohere>=5.0",
    "numpy>=1.24",
    "umap-learn>=0.5.10",
    "evoc>=0.1.3",
    "anthropic>=0.30",
    "toponymy>=0.5,<0.6",
    "sentence-transformers>=3.0",
    "datamapplot>=0.5",
    "glasbey>=0.2",
    "joblib>=1.3",
    "tqdm>=4.60",
    "python-dotenv>=1.0",
    "nest-asyncio>=1.5",
    "scikit-learn>=1.2",
    "datasets>=3.0",
    "fast-hdbscan==0.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14",
    "pre-commit>=4.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
